# mc_rtc-webui

./: .gitattributes  CMakeLists.txt  LICENSE  README.md
data/: index.html  main.js
mc-rtc-ts/: package-lock.json  package.json  tsconfig.json  vite.config.js
mc-rtc-ts/src/: ArrayInput.ts  ArrayLabel.ts  Button.ts  Category.ts  Checkbox.ts  ControllerClient.ts  DataComboInput.ts  Elements.ts  GUI.ts  IntegerInput.ts  Label.ts  NumberSlider.ts  ProtocolVersion.ts  Request.ts  StringInput.ts  Widget.ts  index.ts  utils.ts
mc-rtc-ts/src/details/: SingleInput.ts
mc-rtc-ts/src/gui/: Arrow.ts  Box.ts  ColoredMesh.ts  Cylinder.ts  InteractiveTransform.ts  Mesh.ts  Sphere.ts  TransformControls.js  Visual.ts  utils.ts
mc-rtc-ts/src/types/: ArrowConfig.ts  Axes.ts  Color.ts  ForceConfig.ts  LineConfig.ts  PointConfig.ts  PolyhedronConfig.ts  Request.ts  rbd_Visual.ts
mc-rtc-ts/src/widgets/: ArrayInput.ts  ArrayLabel.ts  Arrow.ts  ArrowBase.ts  Category.ts  Checkbox.ts  ComboInput.ts  Force.ts  Label.ts  NumberInput.ts  Point3D.ts  Polygon.ts  Polyhedron.ts  Rotation.ts  Trajectory.ts  Transform.ts  Visual.ts  Widget.ts  XYTheta.ts  XYZTheta.ts  utils.ts
mc-rtc-ts/src/widgets/details/: TransformBase.ts
src/: Base64.h  ModelStore.cpp  ModelStore.h  TestServer.cpp  TestServer.h  main.cpp
